# mini-exchange

./: .env  .env.example  .gitignore  AI_USAGE.md  Cargo.toml  Dockerfile.audit  Dockerfile.market  Dockerfile.portfolio  IMPLEMENTATION_PLAN.md  README.md  docker-compose.yml  init-databases.sql
audit-service/: Cargo.toml
audit-service/src/: handlers.rs  main.rs  models.rs
market-service/: Cargo.toml
market-service/src/: handlers.rs  main.rs  models.rs  price_engine.rs
portfolio-service/: Cargo.toml
portfolio-service/src/: handlers.rs  main.rs  models.rs  order_engine.rs  store.rs
tests/: integration_tests.sh
