[package]
name = "market-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
rdkafka = { version = "0.36.2", features = ["cmake-build", "tokio"] }
tokio-tungstenite = { version = "0.21.0", features = ["rustls-tls-native-roots"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
dotenvy = "0.15"
